<!--
  ~ Copyright (c) 2017 Michael D'Arcy and Brianne O'Niel.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">MyCards</string>
    <string name="tags_label">Tags:</string>
    <string name="filter">Filter</string>
    <string name="front">Front:</string>
    <string name="front_of_card">Front of card</string>
    <string name="back">Back:</string>
    <string name="back_of_card">Back of card</string>
    <string name="comma_separated">comma-separated</string>
    <string name="card_stats">Card Stats:</string>
    <string name="last_review">Last review:</string>
    <string name="next_review">Next review:</string>
    <string name="total_reviews">Total reviews:</string>
    <string name="easiness">Easiness:</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="start_date">Start date</string>
    <string name="start_time">Start time</string>
    <string name="end_date">End date</string>
    <string name="end_time">End time</string>
    <string name="repeat_every">Repeat every</string>
    <string name="days">days</string>
    <string name="repeat_a_total_of">Repeat a total of</string>
    <string name="times">times</string>
    <string name="tags_to_review_blank_for_all_tags">Tags to review (blank for all tags):</string>
    <string name="tag1_tag2">tag1, tag2, …</string>
    <string name="start_review">Start Review</string>
    <string name="browse_cards">Browse Cards</string>
    <string name="manage_settings">Manage Settings</string>
    <string name="front_text">Front text</string>
    <string name="back_text">Back text</string>
    <string name="skip">Skip</string>
    <string name="show_answer">Show Answer</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="do_not_disturb">Do Not Disturb</string>
    <string name="notification_rules">Notification Rules</string>
    <string name="add_rule">Add Rule</string>
    <string name="add">Add</string>
    <string name="logo">Logo</string>
    <string name="no_more_cards_to_review">No more cards to review</string>
</resources>
