<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 Michael D'Arcy and Brianne O'Niel.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.group13.androidsdk.mycards.EditCardActivity">

    <TextView
        android:id="@+id/labelFrontText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvEditCardFrontText"
        android:layout_alignBottom="@+id/tvEditCardFrontText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#FFFFFF"
        android:text="@string/front"
        android:textColor="#26c99d"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/tvEditCardFrontText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/labelFrontText"
        android:background="#FFFFFF"
        android:hint="@string/front_of_card"
        android:inputType="textMultiLine"
        android:padding="4dp"
        android:textColor="#29c99d"/>

    <TextView
        android:id="@+id/labelBackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvEditCardBackText"
        android:layout_alignBottom="@+id/tvEditCardBackText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#FFFFFF"
        android:text="@string/back"
        android:textColor="#26c99d"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/tvEditCardBackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvEditCardFrontText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/tvEditCardFrontText"
        android:layout_below="@+id/tvEditCardFrontText"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:background="#FFFFFF"
        android:hint="@string/back_of_card"
        android:inputType="textMultiLine"
        android:padding="4dp"
        android:textColor="#29c99d"/>


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvEditTags"
        android:layout_toLeftOf="@+id/tvEditTags"
        android:layout_toStartOf="@+id/tvEditTags"
        android:background="#FFFFFF"
        android:text="@string/tags_label"
        android:textColor="#26c99d"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/tvEditTags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvEditCardBackText"
        android:layout_alignStart="@+id/tvEditCardBackText"
        android:layout_below="@+id/tvEditCardBackText"
        android:layout_marginTop="25dp"
        android:background="#FFFFFF"
        android:hint="@string/comma_separated"
        android:inputType="text"
        android:textColor="#26c99d"
        android:textSize="20sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvEditTags"
        android:layout_marginTop="15dp"
        android:id="@+id/cardStatsContainer">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:text="@string/card_stats"
            android:textColor="#26c99d"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView10"
            android:background="#FFFFFF"
            android:text="@string/last_review"
            android:textColor="#26c99d"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tvLastReviewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView5"
            android:layout_alignBottom="@+id/textView5"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@+id/textView5"
            android:layout_toRightOf="@+id/textView5"
            android:background="#FFFFFF"
            android:text=""
            android:textColor="#26c99d"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tvNextReviewLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView5"
            android:background="#FFFFFF"
            android:text="@string/next_review"
            android:textColor="#26c99d"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tvNextReviewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvNextReviewLabel"
            android:layout_alignBottom="@+id/tvNextReviewLabel"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@+id/tvNextReviewLabel"
            android:layout_toRightOf="@+id/tvNextReviewLabel"
            android:background="#FFFFFF"
            android:text=""
            android:textColor="#26c99d"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tvTotalReviewsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvNextReviewLabel"
            android:background="#FFFFFF"
            android:text="@string/total_reviews"
            android:textColor="#26c99d"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tvTotalReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvTotalReviewsLabel"
            android:layout_alignBottom="@+id/tvTotalReviewsLabel"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@+id/tvTotalReviewsLabel"
            android:layout_toRightOf="@+id/tvTotalReviewsLabel"
            android:background="#FFFFFF"
            android:text=""
            android:textColor="#26c99d"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tvEasinessLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvTotalReviewsLabel"
            android:background="#FFFFFF"
            android:text="@string/easiness"
            android:textColor="#26c99d"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tvEasiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tvEasinessLabel"
            android:layout_alignBottom="@+id/tvEasinessLabel"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@+id/tvEasinessLabel"
            android:layout_toRightOf="@+id/tvEasinessLabel"
            android:background="#FFFFFF"
            android:text=""
            android:textColor="#26c99d"
            android:textSize="14sp"/>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnDeleteCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onDeleteAction"
            android:text="@string/delete"
            android:textColor="#29c99d"
            android:textSize="18sp"
            android:focusable="false"/>

        <Button
            android:id="@+id/btnCancelEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onCancelAction"
            android:text="@string/cancel"
            android:textColor="#29c99d"
            android:textSize="18sp"
            android:focusable="false"/>

        <Button
            android:id="@+id/btnSaveEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onSaveAction"
            android:text="@string/save"
            android:textColor="#29c99d"
            android:textSize="18sp"
            android:focusable="false"/>
    </LinearLayout>
</RelativeLayout>

